--- a/ui/src/app.html
+++ b/ui/src/app.html
@@ -2,8 +2,10 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8"/>
-    <link href="%sveltekit.assets%/favicon.png" rel="icon"/>
     <meta name="format-detection" content="telephone=no">
+    <meta property="og:image" content="http://222.236.163.217:12538/images/BSH08781.jpg">
+    <meta property="og:title" content="영진❤️민교 결혼합니다.">
+    <meta property="og:description" content="10월 9일 수요일 오전 11시">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     %sveltekit.head%
     <script>
